# BlendGmsh

./: .gitignore  LICENSE  README.md  export.ps1  export.sh  pyproject.toml  pytest.ini
blender_addon/: __init__.py  blender_manifest.toml  export.py  mesh_import.py  operators.py  panels.py  properties.py  vertex_groups.py
examples/: box.step  cylinder.step  demo_visualization.py  generate_test_geometry.py
matching_library/: __init__.py  __main__.py  coverage.py  debug.py  matcher.py  mesher.py  tagger.py  tolerance.py
schema/: bc_groups_v1.json
step_converter/: __init__.py  tessellate.py  validate.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_export.py  test_fused_face_detection.py  test_generate_mesh.py  test_matcher.py  test_mesh_import.py  test_mesher.py  test_pipeline.py  test_schema.py  test_tagger.py  test_tessellation.py  test_tolerance.py  test_vertex_groups.py  test_visualization.py
visualization/: __init__.py  visualizer.py
